API key removed

--- a/lab-2.ipynb
+++ b/lab-2.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COMET_API_KEY = 'X1tRJOZTKMUoxKkTC1zxpyltu'\n",
+    "COMET_API_KEY = ''\n",
     "assert COMET_API_KEY != \"\", \"Please insert your Comet API Key\"\n",
     "\n",
     "# Check that we are using a GPU, if not switch runtimes\n",
